# scapyter

./: .gitattributes  README.md  Untitled.ipynb  def_con.ipynb  example.ipynb  main.py  pyproject.toml  requirements.txt
data/smart-card-project/: smart_card_project.sx
domain/: entities.py  key_scheduler.py  value_object.py
domain/correlation/: correlation.py  cpa_correlation.py  cpa_service.py
domain/leakage/: leakage.py
domain/leakage/test_leakage/: test_leakage.py
domain/progress_range/: progress_range.py
domain/repository/: trace_repository.py
domain/snr/: snr.py  snr_task.py
domain/snr/test_snr/: test_snr.py
examples/fft/: example.ipynb
examples/tvla/: example.ipynb  tvla.ipynb  tvla_example.h5
infrastructure/: h5_trace_repository.py
scapyter/application/: trace_processing_service.py
scapyter/domain/: value_object.py
scapyter/domain/correlation/: cpa_correlation.py  cpa_service.py
scapyter/domain/leakage/: leakage.py
scapyter/domain/progress_range/: progress_range.py
scapyter/domain/repository/: project_file_reader.py  trace_repository.py
scapyter/domain/snr/: snr.py  snr_task.py
scapyter/infrastructure/: h5_project_file_reader.py  h5_project_file_writer.py  h5_trace_repository.py  project_file_writer.py
scapyter/ui/: correlation_plotter.py  key_rank_visualizer.py  snr_plotter.py
tests/test_fft/: test_fft.py
tests/test_leakage/: test_leakage.py
tests/test_snr/: test_snr.py
tests/test_tvla/: test_tvla.py  test_tvla_service.py
ui/: correlation_plotter.py  key_rank_visualizer.py  snr_plotter.py  trace_plotter.py
(+16 files in other folders)
