[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scapyter"
version = "0.1.0"
description = "Side-channel analysis toolkit"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "h5py",
    "numba",
    "matplotlib",
    "pandas",
    "jinja2"
]

authors = [
    { name = "Nay Aung Kyaw" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "black",
    "pytest"
]

[tool.setuptools.packages.find]
include = ["scapyter*"]